--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
   --primary-color: #0073aa;
   --secondary-color: #005177;
   --accent-color: #00a0d2;
-  --background-color: #ffffff;
+  --background-color: #f0f0f1;
   --text-color: #333;
   --header-bg-color: var(--background-color);
   --header-text-color: var(--primary-color);
@@ -25,7 +25,7 @@
 }
 
 /* Global Styles */
-body, html {
+#obf-pws {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -36,7 +36,7 @@ body, html {
   line-height: 1.6;
 }
 
-h1, h2, h3, h4, h5, h6 {
+#obf-pws h1, #obf-pws h2, #obf-pws h3, #obf-pws h4, #obf-pws h5, #obf-pws h6 {
   margin: 0;
   padding: 0.5em 0;
 }
@@ -112,22 +112,22 @@ p {
   border-radius: 8px;
 }
 
-.pill-green {
+#obf-pws .pill-green {
   background-color: var(--success-bg-color);
   color: var(--success-text-color);
 }
 
-.pill-blue {
+#obf-pws .pill-blue {
   background-color: var(--info-bg-color);
   color: var(--info-text-color);
 }
 
-.pill-yellow {
+#obf-pws .pill-yellow {
   background-color: var(--warning-bg-color);
   color: var(--warning-text-color);
 }
 
-.pill-red {
+#obf-pws .pill-red {
   background-color: var(--error-bg-color);
   color: var(--error-text-color);
 }
@@ -152,19 +152,19 @@ p {
 }
 
 /* Settings Page Styles */
-.settings-container {
+#obf-pws .settings-container {
   width: 100%;
 }
 
-.section {
+#obf-pws .section {
   margin-bottom: 20px;
 }
 
-h3 {
+#obf-pws h3 {
   margin-bottom: 20px;
 }
 
-.form-group-inline {
+#obf-pws .form-group-inline {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
@@ -172,16 +172,16 @@ h3 {
   width: 100%;
 }
 
-.form-group-inline label {
+#obf-pws .form-group-inline label {
   font-weight: bold;
   margin-right: 10px;
 }
 
-.form-group-inline .pill {
+#obf-pws .form-group-inline .pill {
   margin-left: 10px;
 }
 
-.form-group {
+#obf-pws .form-group {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -189,14 +189,14 @@ h3 {
   width: 100%;
 }
 
-label {
+#obf-pws label {
   font-weight: bold;
   margin-bottom: 5px;
 }
 
-input[type="text"],
-input[type="password"],
-select {
+#obf-pws input[type="text"],
+#obf-pws input[type="password"],
+#obf-pws select {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
@@ -204,57 +204,57 @@ select {
   border-radius: 4px;
 }
 
-.pill {
+#obf-pws .pill {
   padding: 5px 10px;
   border-radius: 20px;
   font-weight: bold;
 }
 
-.status-connected {
+#obf-pws .status-connected {
   background-color: var(--success-bg-color);
   color: var(--success-text-color);
 }
 
-.status-error {
+#obf-pws .status-error {
   background-color: var(--error-bg-color);
   color: var(--error-text-color);
 }
 
-.status-unknown {
+#obf-pws .status-unknown {
   background-color: var(--unknown-bg-color);
   color: var(--unknown-text-color);
 }
 
-.last-sync {
+#obf-pws .last-sync {
   background-color: var(--last-sync-bg-color); /* Light purple background */
   color: var(--last-sync-text-color); /* Dark purple text */
 }
 
-hr {
+#obf-pws hr {
   border: 0;
   border-top: 1px solid #ccc;
   margin: 20px 0;
 }
 
-select {
+#obf-pws select {
   background-color: #fff;
 }
 
 /* Toggle Switch Styling */
-.switch {
+#obf-pws .switch {
   position: relative;
   display: inline-block;
   width: 40px;
   height: 20px;
 }
 
-.switch input {
+#obf-pws .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-.slider {
+#obf-pws .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -266,7 +266,7 @@ select {
   border-radius: 20px;
 }
 
-.slider:before {
+#obf-pws .slider:before {
   position: absolute;
   content: "";
   height: 16px;
@@ -278,10 +278,10 @@ select {
   border-radius: 50%;
 }
 
-input:checked + .slider {
+#obf-pws input:checked + .slider {
   background-color: var(--primary-color);
 }
 
-input:checked + .slider:before {
+#obf-pws input:checked + .slider:before {
   transform: translateX(20px);
 }
